initial about view

--- a/views/home.html
+++ b/views/home.html
@@ -1,11 +1,10 @@
 <%- include('./includes/header.html') %>
 
-    <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">About</a></li>
+          <li class="active"><a href="/about">About</a></li>
         </ul>
-        <a href="#">
+        <a href="/">
           <img src="img/logo.png" alt="Post your job with No Office Needed" class="img-responsive">
         </a>
       </div>
@@ -13,7 +12,7 @@
         <h1>Find remote professionals</h1>
         <p class="lead">Post a remote job, contract, or project opportunity. Click below to get started!</p>
         <p>
-          <a class="btn btn-lg btn-success" href="#" role="button">Post now for $100 <small>(30 days)</small></a>
+          <a class="btn btn-lg btn-success" href="/create-posting" role="button">Post now for $100 <small>(30 days)</small></a>
         </p>
       </div>
 
