setting up for simple-stripe-checkout

--- a/views/create-posting.html
+++ b/views/create-posting.html
@@ -1,6 +1,6 @@
 <%- include('./includes/header.html') %>
 
-  <form action="/charge" method="POST" class="text-center">
+  <form action="/payment" method="POST" class="text-center">
     <script
       src="https://checkout.stripe.com/checkout.js"
       class="stripe-button"
