modifications to user experience

--- a/client/partials/condensed-jobs.html
+++ b/client/partials/condensed-jobs.html
@@ -1,61 +1,61 @@
 <template name="condensedJobs">
-  <!-- use class alert alert-info for sponsored listings in future -->
+  <!-- use class active for sponsored listings in future -->
   <div class="col-lg-6">
     <h2>Front-end JavaScript</h2>
-    <ul>
+    <ul class="list-group">
       {{#each frontEndJobs}}
-        <li>{{title}} - {{category}}</li>
+        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
       {{/each}}
     </ul>
 
     <h2>Back-end JavaScript</h2>
-    <ul>
+    <ul class="list-group">
       {{#each backEndJobs}}
-        <li>{{title}} - {{category}}</li>
+        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
       {{/each}}
     </ul>
 
     <h2>Isomorphic JavaScript</h2>
-    <ul>
+    <ul class="list-group">
       {{#each isomorphic}}
-        <li>{{title}} - {{category}}</li>
+        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
       {{/each}}
     </ul>
 
     <h2>Miscellaneous</h2>
-    <ul>
+    <ul class="list-group">
       {{#each miscellaneous}}
-        <li>{{title}} - {{category}}</li>
+        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
       {{/each}}
     </ul>
   </div>
 
   <div class="col-lg-6">
     <h2>Design</h2>
-    <ul>
+    <ul class="list-group">
       {{#each design}}
-        <li>{{title}} - {{category}}</li>
+        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
       {{/each}}
     </ul>
 
     <h2>Sales/Marketing</h2>
-    <ul>
+    <ul class="list-group">
       {{#each salesMarketing}}
-        <li>{{title}} - {{category}}</li>
+        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
       {{/each}}
     </ul>
 
     <h2>Help Desk/Support</h2>
-    <ul>
+    <ul class="list-group">
       {{#each helpDesk}}
-        <li>{{title}} - {{category}}</li>
+        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
       {{/each}}
     </ul>
 
     <h2>System Admin</h2>
-    <ul>
+    <ul class="list-group">
       {{#each systemAdmin}}
-        <li>{{title}} - {{category}}</li>
+        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
       {{/each}}
     </ul>
   </div>
