job posting detail page

--- a/client/partials/condensed-jobs.html
+++ b/client/partials/condensed-jobs.html
@@ -4,28 +4,36 @@
     <h2>Front-end JavaScript</h2>
     <ul class="list-group">
       {{#each frontEndJobs}}
-        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
+        <li class="list-group-item">
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}">See more</a>
+        </li>
       {{/each}}
     </ul>
 
     <h2>Back-end JavaScript</h2>
     <ul class="list-group">
       {{#each backEndJobs}}
-        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
+        <li class="list-group-item">
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}">See more</a>
+        </li>
       {{/each}}
     </ul>
 
     <h2>Isomorphic JavaScript</h2>
     <ul class="list-group">
       {{#each isomorphic}}
-        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
+        <li class="list-group-item">
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}">See more</a>
+        </li>
       {{/each}}
     </ul>
 
     <h2>Miscellaneous</h2>
     <ul class="list-group">
       {{#each miscellaneous}}
-        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
+        <li class="list-group-item">
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}">See more</a>
+        </li>
       {{/each}}
     </ul>
   </div>
@@ -34,28 +42,36 @@
     <h2>Design</h2>
     <ul class="list-group">
       {{#each design}}
-        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
+        <li class="list-group-item">
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}">See more</a>
+        </li>
       {{/each}}
     </ul>
 
     <h2>Sales/Marketing</h2>
     <ul class="list-group">
       {{#each salesMarketing}}
-        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
+        <li class="list-group-item">
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}">See more</a>
+        </li>
       {{/each}}
     </ul>
 
     <h2>Help Desk/Support</h2>
     <ul class="list-group">
       {{#each helpDesk}}
-        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
+        <li class="list-group-item">
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}">See more</a>
+        </li>
       {{/each}}
     </ul>
 
     <h2>System Admin</h2>
     <ul class="list-group">
       {{#each systemAdmin}}
-        <li class="list-group-item">{{name}} - {{title}} - {{createdAt}}</li>
+        <li class="list-group-item">
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}">See more</a>
+        </li>
       {{/each}}
     </ul>
   </div>
