Fixed link color and hover state.

--- a/jboard.css
+++ b/jboard.css
@@ -10,6 +10,15 @@ textarea {
   resize: none;
 }
 
+a {
+  color: #333;
+}
+
+a:hover {
+  color: #555;
+  text-decoration: none;
+}
+
 ul {
   padding-left: 0;
 }
@@ -20,6 +29,15 @@ li {
 
 label {
   padding: 0 10px 0;
+}
+
+.site-link {
+  color: #337ab7;
+}
+
+.site-link:hover {
+  color: #23527c;
+  text-decoration: underline;
 }
 
 .alert {
