--- a/client/partials/condensed-jobs.html
+++ b/client/partials/condensed-jobs.html
@@ -4,7 +4,7 @@
     <h2><a href="/front_end_jobs">Front-end JavaScript</a></h2>
     <ul class="list-group">
       {{#each frontEndJobs}}
-      <a href="/post/{{_id}}">
+      <a href="/{{title}}/{{_id}}">
         <li class="list-group-item">
           <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}}
 
@@ -17,7 +17,7 @@
     <ul class="list-group">
       {{#each backEndJobs}}
         <li class="list-group-item">
-          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}">See more</a>
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/{{title}}/{{_id}}">See more</a>
         </li>
       {{/each}}
     </ul>
