append job title to URL for SEO

--- a/client/partials/condensed-jobs.html
+++ b/client/partials/condensed-jobs.html
@@ -4,7 +4,7 @@
     <h2><a href="/front_end_jobs">Front-end JavaScript</a></h2>
     <ul class="list-group">
       {{#each frontEndJobs}}
-      <a href="/{{title}}/{{_id}}">
+      <a href="/{{urlTitle}}/{{_id}}">
         <li class="list-group-item">
           <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}}
 
