Adding category link to all categories.

--- a/client/partials/condensed-jobs.html
+++ b/client/partials/condensed-jobs.html
@@ -13,7 +13,7 @@
       {{/each}}
     </ul>
 
-    <h2>Back-end JavaScript</h2>
+    <h2><a href="/back_end_jobs">Back-end JavaScript</a></h2>
     <ul class="list-group">
       {{#each backEndJobs}}
       <a href="/{{urlTitle}}/{{_id}}">
@@ -24,7 +24,7 @@
       {{/each}}
     </ul>
 
-    <h2>Isomorphic JavaScript</h2>
+    <h2><a href="/fullstack_jobs">Isomorphic JavaScript</a></h2>
     <ul class="list-group">
       {{#each isomorphic}}
       <a href="/{{urlTitle}}/{{_id}}">
@@ -35,7 +35,7 @@
       {{/each}}
     </ul>
 
-    <h2>Miscellaneous</h2>
+    <h2><a href="/miscellaneous_jobs">Miscellaneous</a></h2>
     <ul class="list-group">
       {{#each miscellaneous}}
       <a href="/{{urlTitle}}/{{_id}}">
@@ -48,7 +48,7 @@
   </div>
 
   <div class="col-lg-6">
-    <h2>Design</h2>
+    <h2><a href="/design_jobs">Design</a></h2>
     <ul class="list-group">
       {{#each design}}
       <a href="/{{urlTitle}}/{{_id}}">
@@ -59,7 +59,7 @@
       {{/each}}
     </ul>
 
-    <h2>Sales/Marketing</h2>
+    <h2><a href="/sales_marketing_jobs">Sales/Marketing</a></h2>
     <ul class="list-group">
       {{#each salesMarketing}}
       <a href="/{{urlTitle}}/{{_id}}">
@@ -70,7 +70,7 @@
       {{/each}}
     </ul>
 
-    <h2>Help Desk/Support</h2>
+    <h2><a href="/help_desk_support_jobs">Help Desk/Support</a></h2>
     <ul class="list-group">
       {{#each helpDesk}}
       <a href="/{{urlTitle}}/{{_id}}">
@@ -81,7 +81,7 @@
       {{/each}}
     </ul>
 
-    <h2>System Admin</h2>
+    <h2><a href="/system_admin_jobs">System Admin</a></h2>
     <ul class="list-group">
       {{#each systemAdmin}}
       <a href="/{{urlTitle}}/{{_id}}">
