Changed jumbotron to remote and flexible jobs

--- a/client/partials/jumbotron.html
+++ b/client/partials/jumbotron.html
@@ -1,6 +1,6 @@
 <template name="jumbotron">
   <div class="jumbotron">
-    <h1>Flexible JavaScript Jobs</h1>
+    <h1>Remote and Flexible Jobs</h1>
     <p class="lead">
       No Office Needed is intended for job postings related to positions that offer work from home/flexible schedules.
       Standard job postings are completely free of charge.
