Changed hyphens on condensed job page

--- a/client/partials/condensed-jobs.html
+++ b/client/partials/condensed-jobs.html
@@ -1,7 +1,7 @@
 <template name="condensedJobs">
   <!-- use class active for sponsored listings in future -->
   <div class="col-lg-12">
-    <h2><a href="/front_end_jobs">Front-End Jobs</a></h2>
+    <h2><a href="/front_end_jobs">Front End Jobs</a></h2>
     <ul class="list-group">
       {{#each frontEndJobs}}
       <a href="/{{urlTitle}}/{{_id}}">
@@ -13,7 +13,7 @@
       {{/each}}
     </ul>
 
-    <h2><a href="/back_end_jobs">Back-End Jobs</a></h2>
+    <h2><a href="/back_end_jobs">Back End Jobs</a></h2>
     <ul class="list-group">
       {{#each backEndJobs}}
       <a href="/{{urlTitle}}/{{_id}}">
