--- a/client/partials/condensed-jobs.html
+++ b/client/partials/condensed-jobs.html
@@ -18,7 +18,7 @@
       {{#each backEndJobs}}
       <a href="/{{urlTitle}}/{{_id}}">
         <li class="list-group-item">
-          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/{{title}}/{{_id}}">See more</a>
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/{{title}}/{{_id}}"></a>
         </li>
       </a>
       {{/each}}
