Added View All linksto each category on condensed job page

--- a/client/partials/condensed-jobs.html
+++ b/client/partials/condensed-jobs.html
@@ -11,6 +11,7 @@
         </li>
       </a>
       {{/each}}
+      <a href="/front_end_jobs">View All Front End Jobs</a>
     </ul>
 
     <h2><a href="/back_end_jobs">Back End Jobs</a></h2>
@@ -18,10 +19,11 @@
       {{#each backEndJobs}}
       <a href="/{{urlTitle}}/{{_id}}">
         <li class="list-group-item">
-          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/{{title}}/{{_id}}"></a>
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | 
         </li>
       </a>
       {{/each}}
+      <a href="/back_end_jobs">View All Back End Jobs</a>
     </ul>
 
     <h2><a href="/fullstack_jobs">Full Stack Jobs</a></h2>
@@ -29,10 +31,11 @@
       {{#each isomorphic}}
       <a href="/{{urlTitle}}/{{_id}}">
         <li class="list-group-item">
-          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}"></a>
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | 
         </li>
       </a>
       {{/each}}
+      <a href="/fullstack_jobs">View All Full Stack Jobs</a>
     </ul>
 
     <h2><a href="/miscellaneous_jobs">Miscellaneous Jobs</a></h2>
@@ -40,10 +43,11 @@
       {{#each miscellaneous}}
       <a href="/{{urlTitle}}/{{_id}}">
         <li class="list-group-item">
-          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}"></a>
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | 
         </li>
       </a>
       {{/each}}
+      <a href="/miscellaneous_jobs">View All Miscellaneous Jobs</a>
     </ul>
   </div>
 
@@ -53,10 +57,11 @@
       {{#each design}}
       <a href="/{{urlTitle}}/{{_id}}">
         <li class="list-group-item">
-          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}"></a>
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | 
         </li>
       </a>
       {{/each}}
+      <a href="/design_jobs">View All Design Jobs</a>
     </ul>
 
     <h2><a href="/sales_marketing_jobs">Sales and Marketing Jobs</a></h2>
@@ -64,10 +69,11 @@
       {{#each salesMarketing}}
       <a href="/{{urlTitle}}/{{_id}}">
         <li class="list-group-item">
-          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}"></a>
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | 
         </li>
       </a>
       {{/each}}
+      <a href="/sales_marketing_jobs">View All Sales and Marketing Jobs</a>
     </ul>
 
     <h2><a href="/help_desk_support_jobs">Help Desk and Technical Support Jobs</a></h2>
@@ -75,10 +81,11 @@
       {{#each helpDesk}}
       <a href="/{{urlTitle}}/{{_id}}">
         <li class="list-group-item">
-          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}"></a>
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | 
         </li>
       </a>
       {{/each}}
+      <a href="/help_desk_support_jobs">View All Help Desk and Technical Support Jobs</a>
     </ul>
 
     <h2><a href="/system_admin_jobs">System Admin and DevOps Jobs</a></h2>
@@ -86,10 +93,11 @@
       {{#each systemAdmin}}
       <a href="/{{urlTitle}}/{{_id}}">
         <li class="list-group-item">
-          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | <a href="/post/{{_id}}"></a>
+          <strong>{{name}}</strong> - <u>{{title}}</u> - {{createdAt}} | 
         </li>
       </a>
       {{/each}}
+      <a href="/system_admin_jobs">View All System Admin and DevOps Jobs</a>
     </ul>
   </div>
 </template>
