Remove posting left margin

--- a/jboard.less
+++ b/jboard.less
@@ -61,6 +61,7 @@ label {
   border: none;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
+  padding: 10px 0px;
 
   &:first-child, &:last-child {
     border-bottom-left-radius: 0;
