--- a/jboard.less
+++ b/jboard.less
@@ -122,6 +122,30 @@ label {
   }
 }
 
+.postBreadCrumb{
+  li{
+    -webkit-border-radius: 3px !important;
+  -moz-border-radius: 3px !important;
+  -ms-border-radius: 3px !important;
+  -o-border-radius: 3px !important;
+  border-radius: 3px !important;
+  margin-bottom: 3px;
+  border: 1px solid #e1e1e1;
+  padding: 5px 20px;
+
+    i{
+      margin-right: 3px;
+    }
+  }
+}
+
+h2.title{
+  border-top: 1px solid #e1e1e1;
+ padding-top: 40px;
+ margin-top: 30px;
+ padding-bottom: 20px;
+}
+
 /* Customize container */
 @media (min-width: 768px) {
   .container {
