Add quill editors to create posting page

--- a/jboard.less
+++ b/jboard.less
@@ -74,6 +74,10 @@ label {
 
 .create-posting-form {
   margin: 35px 0;
+  label {
+    padding: 0;
+    margin-bottom: 2px;
+  }
   .form-control {
     padding: 6px 8px;
   }
