--- a/jboard.less
+++ b/jboard.less
@@ -17,6 +17,9 @@
   margin-right: @right;
 }
 
+.fontWeight(@weight){
+  font-weight: @weight;
+}
 
 body {
   font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
