--- a/jboard.less
+++ b/jboard.less
@@ -171,6 +171,10 @@ h2.title{
 
 .postingWrapper{
  .background(#fff);
+ h3{
+   .margins(30px, 10px, 0, 0);
+   .fontWeight(bold);
+ }
 }
 
 /* Customize container */
