--- a/client/partials/footer.html
+++ b/client/partials/footer.html
@@ -1,5 +1,7 @@
 <template name="footer">
-  <footer class="footer">
-    <p>No Office Needed &copy; 2015</p>
-  </footer>
+  <div class="container">
+    <footer class="footer">
+      <p>No Office Needed &copy; 2015</p>
+    </footer>
+  </div>
 </template>
