--- a/client/partials/jumbotron.html
+++ b/client/partials/jumbotron.html
@@ -1,10 +1,8 @@
 <template name="jumbotron">
   <div class="jumbotron">
     <h1>Remote and Flexible Jobs</h1>
-    <p class="lead">
-      No Office Needed is intended for job postings related to positions that offer work from home/flexible schedules.
-      Standard job postings are completely free of charge.
-    </p>
+    <p class="lead">No Office Needed is intended for job postings related to positions that offer work from home/flexible schedules.</p>
+    <p class="lead">Standard job postings are completely free of charge.</p>
     <p><a class="btn btn-lg btn-primary create-posting-link" href="/create-posting" role="button">Create Job Posting!</a></p>
   </div>
 </template>
