--- a/jboard.less
+++ b/jboard.less
@@ -53,6 +53,12 @@ label {
   padding: 0 10px 0;
 }
 
+.jumbotron {
+  background: url('/noOfficeHero.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .site-link {
   color: #337ab7;
 
