--- a/client/partials/header.html
+++ b/client/partials/header.html
@@ -1,7 +1,9 @@
 <template name="header">
-  <div class="header clearfix">
-    <a href="/">
-      <img src="/logo.png" alt="No Office Needed"/>
-    </a>
+  <div class="container">
+    <div class="header clearfix">
+      <a href="/">
+        <img src="/logo.png" alt="No Office Needed"/>
+      </a>
+    </div>
   </div>
 </template>
