Updating hero image and adding confirm posting buttons

--- a/jboard.less
+++ b/jboard.less
@@ -55,7 +55,11 @@ label {
 
 .jumbotron {
   background: url('/noOfficeHero.jpg');
-  background-size: cover;
+  background-size: 100% 100%;
+  color: #eee;
+  text-shadow: 1px 2px #333;
+  height: 33em;
+  padding-top: 6em;
   background-repeat: no-repeat;
 }
 
@@ -138,9 +142,8 @@ label {
 .marketing {
   padding-right: 15px;
   padding-left: 15px;
-  margin: 40px 0;
 
-  p + h4 {
+    p + h4 {
     margin-top: 28px;
   }
 }
