--- a/jboard.less
+++ b/jboard.less
@@ -159,6 +159,56 @@ label {
   }
 }
 
+/* Job Group styling for landing page */
+
+.jobGroup{
+
+  a{
+      border-bottom: 1px solid #e7e7e7;
+  		color: #888;
+  		display: block;
+  		float: left;
+  		padding: 15px;
+  		position: relative;
+  		overflow: hidden;
+  		width: 100%;
+  	}
+
+  	a:nth-child(2n) {
+  			background: #f8f8f8;
+  	}
+
+  	a:hover {
+  	 	background: #f2f2f2;
+  	}
+
+    .titleCompany{
+      float: left;
+    }
+
+    h5{
+      .margins(0, 0, 0, 0);
+      .fontWeight(bold);
+    }
+
+    .details{
+      float: right;
+
+      span{
+        display: inline-block;
+        padding: 16px 0 0;
+        width: 10rem;
+      }
+
+      .dateCreated{
+        width: 18rem;
+      }
+
+    }
+
+}
+
+/* Job Posting bread crumb */
 .postBreadCrumb{
 
   .margins(30px, 30px, 0, 0);
