--- a/jboard.less
+++ b/jboard.less
@@ -1,3 +1,5 @@
+@btn-bg: #10C8CD;
+
 .boxShadow(@radius){
   -webkit-border-radius: @radius !important;
   -moz-border-radius: @radius !important;
@@ -121,7 +123,7 @@ label {
 /* Custom page header */
 .header {
   padding: 0 15px 20px;
-  border-bottom: 1px solid #e5e5e5;
+  height: 3em;
 
   /* Make the masthead heading the same height as the navigation */
   h3{
@@ -156,6 +158,7 @@ label {
   .btn {
     padding: 14px 24px;
     font-size: 21px;
+    text-shadow: none;
   }
 }
 
