--- a/client/partials/footer.html
+++ b/client/partials/footer.html
@@ -1,7 +1,31 @@
 <template name="footer">
-  <div class="container">
     <footer class="footer">
-      <p>No Office Needed &copy; 2015</p>
+      <div class="footer-links">
+        <div>
+          <h3>Quick links</h3>
+          <ul>
+            <li><a href="/front_end_jobs">Front End Jobs</a></li>
+            <li><a href="/back_end_jobs">Back End Jobs</a></li>
+            <li><a href="/fullstack_jobs">Full Stack Jobs</a></li>
+            <li><a href="/miscellaneous_jobs">Miscellaneous Jobs</a></li>
+            <li><a href="/design_jobs">Design Jobs</a></li>
+            <li><a href="/sales_marketing_jobs">Sales and Marketing Jobs</a></li>
+            <li><a href="/help_desk_support_jobs">Help Desk and Technical Support Jobs</a></li>
+            <li><a href="/system_admin_jobs">System Admin and DevOps Jobs</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-logo">
+        <ul>
+          <li>
+            <a href="#" target="_blank"><img src="/square-facebook.png" alt="facebook"></a>
+          </li>
+          <li>
+            <a href="#" target="_blank"><img src="/square-twitter.png" alt="instagram"></a>
+          </li>
+        </ul>
+      </div>
+
+      <p>NoOfficeNeeded &copy; 2015</p>
     </footer>
-  </div>
 </template>
